using akka api directly

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka://shopping-cart-application@127.0.0.1:25520"
+      "akka://account-application@127.0.0.1:25520"
     ]
 
     # auto downing is NOT safe for production deployments.
